# goit-algo-hw-04

./: .gitignore  README.md  pyproject.toml
j01/: main.py
j02/: main.py
j03/: main.py
